# TEMPUS

./: .env  Dockerfile  backend-Dockerfile  main.py  pyproject.toml  requirements.txt  settings.py  tempus-bd.sql
alembic/: env.py
alembic/versions/: f0cef056cad7_criacao_inicial_das_tabelas.py
app/: main.py
app/controllers/: cliente_controller.py  funcionario_controller.py  item_servico_controller.py  ordem_servico_controller.py  servico_controller.py
app/core/: config.py  database.py  dependencies.py  security.py  settings.py
app/models/: cliente_model.py  funcionario_model.py  item_servico_model.py  ordem_servico_model.py  servico_model.py
app/modules/: categoria_model.py  categoria_repository.py  categoria_schema.py
app/modules/auth/: auth_router.py  auth_service.py
app/modules/categoria/: categoria_model.py  categoria_repository.py  categoria_router.py  categoria_schema.py  categoria_service.py
app/modules/cliente/: cliente_model.py  cliente_repository.py  cliente_router.py  cliente_schema.py  cliente_service.py
app/modules/funcionario/: especialidades.py  funcionario_especialidade.py  funcionario_model.py  funcionario_repository.py  funcionario_router.py  funcionario_schema.py  funcionario_service.py
app/modules/item_servico/: item_servico_model.py  (+4 more)
app/routers/: api_router.py
app/schemas/: cliente_schema.py  funcionario_schema.py  item_servico_schema.py  ordem_servico_schema.py  servico_schema.py
app/services/: cliente_service.py  funcionario_service.py  item_servico_service.py  ordem_servico_service.py  servico_service.py
(+13 files in other folders)
